Updated jshell draft